[M7][DEVENV] Domain+persistence+OpenAPI
